Fix pokenalysis image stretch

--- a/main.css
+++ b/main.css
@@ -183,8 +183,8 @@
 }
 
 .pokenalysis-img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
     /* transform: translateX(-130px); */
     transform: none;
 }
